tests/NormalTests/paczka1/fuzzy1/28925177.err
Error in line 20: N6cpkwH85h S948 43,91
Error in line 18: N6cpkwH85h S948 93,7
Error in line 22: N6cpkwH85h S533 30,2
Error in line 26: zgUnMhxNeR S533 13,2
Error in line 28: S948 S948 48,0
